# OS_LAB

./: .replit  CMakeLists.txt  Killing_Child_Alarm.c  LISCENSE.md  OS_LAB_TEST_1.c  OS_LAB_TEST_2.c  OS_LAB_TEST_3.c  OS_LAB_TEST_4.c  a.out  lb.out
Assignment_1/: arg.out  calls_D.out  calls_EXTRA.out  calls_EXTRA_2.out  cmds.out  convert.out  count.out  lb_t.out  new.txt  question1.c  question2.c  question3.c  question4.c  question5.c  question5_EXTRA_2.c  question5_extra.c  test.txt
Assignment_2/: cpu_scheduler.c  process1.txt  process3.txt  result.txt
Assignment_3/: a.out  din_phil_monitor.cpp  dining_philosopher.c
Assignment_4/: a.out  matrix_mul_thrd.c  prod_cons.c  reader_writer.c
Assignment_5/: a.out  deadlock.c
