cmake_minimum_required(VERSION 3.27)
project(OS_LAB C)

set(CMAKE_C_STANDARD 11)

add_executable(OS_LAB
        Assignment_1/question1.c
        Assignment_1/question2.c
        Assignment_1/question3.c
        Assignment_1/question4.c
        Assignment_1/question5.c
        Assignment_1/question5_extra.c)
